wip: 改名前快照（含进行中的 logging/team/UI 改动）
Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>